--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <p>
-            <a href="#" onclick="pageCheck()">チェック開始</a>
-        </p>
+        <div id="pageChecker">チェック開始</div>
     </div>
-    <script src="./js/jquery-3.1.1.min.js"></script>
-    <script src="./js/jquery.balloon.min.js"></script>
-    <script src="./js/checker-version/checker-1.0.2.js"></script>
+    <script src="./popup.js" charset="utf-8"></script>
 </body>
 </html>
