--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,19 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="pageChecker">チェック開始</div>
+        <h3 class="title">調べたい項目を選択してください。</h3>
+        <form name="checklist">
+            <label>
+                <input type="checkbox" name="item" value="domain" checked="checked">ドメインチェック
+            </label>
+            <label>
+                <input type="checkbox" name="item" value="hash" checked="checked">ハッシュタグチェック
+            </label>
+            <label>
+                <input type="checkbox" name="item" value="parm" checked="checked">パラメータチェック
+            </label>
+        </form>
+        <div id="pageChecker" class="btn">チェックするぞー！</div>
     </div>
     <script src="./popup.js" charset="utf-8"></script>
 </body>
