edit balloon CSS

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/balloon.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +21,14 @@
             </label>
         </form>
         <div id="pageChecker" class="btn">チェックするぞー！</div>
+    <div class="balloon" style="font-size: 0.7rem; min-width: 0.7rem; padding: 0.2rem 0.5rem; border: 1px solid rgba(212, 212, 212, 0.4); border-radius: 3px; box-shadow: rgb(85, 85, 85) 2px 2px 4px; color: rgb(17, 17, 17); background-color: rgb(255, 255, 255); opacity: 1; z-index: 32767; text-align: left; visibility: visible; position: absolute;">
+        <div class="balloon-inner">
+            <p class="balloon-title">ドメインが違う遷移が存在します。</p><p class="balloon-disc">https://www3.lifecard.co.jp/WebDesk/www/nyukai/nyukaiYak.html?cardSybt=100002&amp;mosikChnl=4141</p>
+        </div>
+        <div class="balloon-inner">
+            <p class="balloon-title">パラメータが存在します。</p><p class="balloon-disc">cardSybt</p><p class="balloon-disc">mosikChnl</p>
+        </div>
+    </div>
     </div>
     <script src="./popup.js" charset="utf-8"></script>
 </body>
