--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
             <i class="pb_close fa fa-2x fa-window-close" aria-hidden="true"></i>
         </div>
         <div class="pb_content">
-            <div class="listDomain">
+            <div class="listdomain">
                 <h2>ページ内に含まれている別ドメイン</h2>
                 <ul>
                     <li>hoge</li>
@@ -23,7 +23,7 @@
                     <li>hoge</li>
                 </ul>
             </div>
-            <div class="listHash">
+            <div class="listhash">
                 <h2>ページ内に含まれているハッシュ</h2>
                 <ul>
                     <li>hoge</li>
@@ -31,7 +31,7 @@
                     <li>hoge</li>
                 </ul>
             </div>
-            <div class="listParm">
+            <div class="listparm">
                 <h2>ページ内に含まれているパラメータ</h2>
                 <ul>
                     <li>hoge</li>
@@ -41,6 +41,5 @@
             </div>
         </div>
     </div>
-    <h2>hogehogehogehogehogehoghogheogheogheo</h2>
 </body>
 </html>
