Add new Files and edit js

--- a/demo.html
+++ b/demo.html
@@ -11,33 +11,38 @@
 <body>
     <div class="popBox">
         <div class="pb_header clearfix">
-            <h1 class="pb_title">ページ情報一覧</h1>
-            <i class="pb_close fa fa-2x fa-window-close" aria-hidden="true"></i>
+            <h1 class="pb_title tb_center">ページ情報一覧</h1>
+            <i class="pb_close fa fa-2x fa-window-close tb_center" aria-hidden="true"></i>
         </div>
         <div class="pb_content">
             <div class="listdomain">
-                <h2>ページ内に含まれている別ドメイン</h2>
+                <h2 class="listTitle">ページ内に含まれている別ドメイン</h2>
                 <ul>
                     <li>hoge</li>
                     <li>hoge</li>
                     <li>hoge</li>
                 </ul>
+                <p class="discription">計測したいゴールが「テスト対象ページ」のドメインと違う場合、
+                   outboundの設定が必要になります。ヘルプページは<a href="https://support.kaizenplatform.net/hc/ja/articles/206069942">こちら</a></p>
             </div>
             <div class="listhash">
-                <h2>ページ内に含まれているハッシュ</h2>
+                <h2 class="listTitle">ページ内に含まれているハッシュ</h2>
                 <ul>
                     <li>hoge</li>
                     <li>hoge</li>
                     <li>hoge</li>
                 </ul>
+                <p class="discription">JavaScriptにて動的に制御されている場合、Kaizenでは編集できない場合があります。仕様を確認してください。<br>
+                   また、URLにハッシュが付いているページをテスト対象にすることはできません。ご注意ください。</p>
             </div>
             <div class="listparm">
-                <h2>ページ内に含まれているパラメータ</h2>
+                <h2 class="listTitle">ページ内に含まれているパラメータ</h2>
                 <ul>
                     <li>hoge</li>
                     <li>hoge</li>
                     <li>hoge</li>
                 </ul>
+                <p class="discription">遷移にパラメータが含まれている時、パラメータを固定化するとテスト対象ページに不具合が発生する場合があります。ご注意ください。</p>
             </div>
         </div>
     </div>
