--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
     <div class="popBox">
         <div class="pb_header clearfix">
             <h1 class="pb_title tb_center">ページ情報一覧</h1>
-            <i class="pb_close fa fa-2x fa-window-close tb_center" aria-hidden="true"></i>
+            <p  class="pb_close tb_center"><a aria-hidden="true">X</a></p>
         </div>
         <div class="pb_content">
             <div class="listdomain">
