--- a/demo.html
+++ b/demo.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/infobox.css">
     <title>Demo</title>
+    <script src="./js/jquery-3.1.1.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div class="popBox">
         <div class="pb_header clearfix">
             <h1 class="pb_title tb_center">ページ情報一覧</h1>
-            <p  class="pb_close tb_center"><a aria-hidden="true">X</a></p>
+            <p class="pb_close_btn tb_center">X</p>
+            <div class="pos_slide_wrap tb_center">
+                <p class="pb_leftBtn">L</p>
+                <p class="pb_rightBtn">R</p>
+            </div>
         </div>
         <div class="pb_content">
             <div class="listdomain">
@@ -46,5 +51,53 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+    $(".pb_close_btn").on({
+        click : function(){
+            $(".pb_content").toggleClass('pb_content_dis');
+            console.log("hogehoge");
+            if($(".pb_content").hasClass('pb_content_dis')){
+                $(".pb_content").stop(true).animate({
+                    height:'0px'
+                },300,function(){
+                    $(".pb_header").css({'border-bottom':'1px solid #78909C'});
+                });
+                $(".pb_close_btn").text('O');
+            }
+            else{
+                $(".pb_header").css({'border-bottom':'none'});
+                $(".pb_content").stop(true).animate({
+                    height:'292px'
+                },300);
+                $(".pb_close_btn").text('X');
+            }
+        }
+    });
+
+    $(".pb_leftBtn").on({
+        click : function(){
+            $(".popBox").css({
+                top  : "10px",
+                left : "10px"
+            })
+        }
+    });
+
+    $(".pb_rightBtn").on({
+        click : function(){
+            $(".popBox").css({
+                top  : "10px",
+                left : $(window).width() - $(".popBox").width() - 10 + "px"
+            })
+        }
+    });
+
+    function getLeft(){
+        var a = ;
+        console.log(a);
+        return a;
+    }
+
+    </script>
 </body>
 </html>
