--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,12 @@
     <div class="wrapper">
         <h3 class="title">調べたい項目を選択してください。</h3>
         <form name="checklist">
+            <!-- <label>
+                <input type="checkbox" name="item" value="tag" checked="checked">タグマネージャーチェック
+            </label>
+            <label>
+                <input type="checkbox" name="item" value="analytics" checked="checked">アナリティクスチェック
+            </label> -->
             <label>
                 <input type="checkbox" name="item" value="domain" checked="checked">ドメインチェック
             </label>
