--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/balloon.css">
+    <link href="https://fonts.googleapis.com/css?family=Mako" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+    <header><h3 class="title wf-Mako">Page Check Ninja</h3></header>
     <div class="wrapper">
-        <header><h3 class="title">ページチェッカー</h3></header>
         <form name="checklist">
             <ul>
                 <li>
